# Cookbook

./: $ Formatting Command.md  .gitignore  Asiatische Chilinudeln.md  Chili con Tofu.md  Curry-Dattel-Dip.md  Italienischer Nudelsalat.md  README.md  Türkische Linsensuppe.md  pyproject.toml  recipes.json
.github/workflows/: deploy-frontend.yml  deploy.yml  format-recipes.yml  test-workflow.yml  update-readme.yml  update-recipes-json.yml
.obsidian/: .gitignore  app.json  community-plugins.json  graph.json  workspace.json
Rezepte/: Türkische Linsensuppe.md  Veganes Hummus.md
Rezepte/Beilagen/: Italienischer Nudelsalat.md
Rezepte/Dips/: Curry-Dattel-Dip.md  Veganes Hummus.md  Veganes.md
Rezepte/Hauptgerichte/: Asiatische Chilinudeln.md  Burger.md  Chili con Tofu.md  Mie-Nudel-Pfanne mit Tofu.md
Rezepte/Rezeptschritte/: Zwiebeln karamellisieren.md
data/: recipes.json
py/: pyproject.toml
py/src/: add_emojis.py  collect_recipes.py  format_recipes.py  update_readme.py
recipes/: README.md
recipes/Beilagen/: Italienischer Nudelsalat.md
recipes/Dips/: Curry-Dattel-Dip.md  Hummus.md
recipes/Hauptgerichte/: Asiatische Chilinudeln.md  Bowl.draft.md  Bowl.formatted.md  Bowl.md  Burger.md  Chili con Tofu.md  Gnocchi‑Pfanne mit Halloumi, geröstetem mediterranem Gemüse & basilikumfrischem Pesto.draft.md  Gnocchi‑Pfanne mit Halloumi, geröstetem mediterranem Gemüse & basilikumfrischem Pesto.formatted.md  (+4 more)
scripts/: add_emojis.py  collect_recipes.py  format_recipe.py  format_recipes.py  generate_readme.py  helpers.py  test_workflow.py  update_readme.py
(+20 files in other folders)
